--- a/taylor_pythonHelloInput.html
+++ b/taylor_pythonHelloInput.html
@@ -2,6 +2,8 @@
 input_box = Element("operandOne")
 operandOne = float(input_box.value)
 </py-script>
+blue= ("color")
+two=2
 
 <py-script>
 result = Element("total")
