--- a/taylor_pythonHelloInput.html
+++ b/taylor_pythonHelloInput.html
@@ -2,8 +2,7 @@
 input_box = Element("operandOne")
 operandOne = float(input_box.value)
 </py-script>
-blue= ("color")
-two=2
+link wwww.helloworldlt.com
 
 <py-script>
 result = Element("total")
