--- a/taylor_pythonHelloInput.html
+++ b/taylor_pythonHelloInput.html
@@ -2,10 +2,10 @@
 input_box = Element("operandOne")
 operandOne = float(input_box.value)
 </py-script>
-blue= ("color")
-two=2
 
 <py-script>
 result = Element("total")
 result.write("Hello!  The input says:" + str(operandOne))
 </py-script>
+ hi= ("hello")
+ print=(hi)
